fixed the Comment can't be recoginzed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@saintic/vuepress-plugin-utterances",
-    "author": "staugur <me@tcw.im>",
-    "version": "0.2.0",
+    "name": "vuepress-plugin-zhxie-utterances",
+    "author": "zhongwei<472408570@qq.com>",
+    "version": "1.0.8",
     "description": "A simple comments plugin for vuepress",
     "main": "index.js",
     "license": "BSD-3-Clause",
@@ -11,13 +11,5 @@
     "keywords": [
         "comments",
         "vuepress"
-    ],
-    "homepage": "https://github.com/staugur/vuepress-plugin-utterances",
-    "bugs": {
-        "url": "https://github.com/staugur/vuepress-plugin-utterances/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/staugur/vuepress-plugin-utterances.git"
-    }
+    ]
 }
